Update to the latest version of the RFC 119 constants.
git-svn-id: https://svn.apache.org/repos/asf/cxf/dosgi/trunk@768288 13f79535-47bb-0310-9956-ffa450edef68