@@ -18,8 +18,10 @@
   */
 package org.apache.cxf.dosgi.dsw.service;
 
-import java.net.MalformedURLException;
-import java.net.URL;
+import static org.osgi.service.discovery.ServicePublication.ENDPOINT_LOCATION;
+
+import java.net.URI;
+import java.net.URISyntaxException;
 import java.util.Collection;
 import java.util.Collections;
 import java.util.HashSet;
@@ -29,8 +31,6 @@ import java.util.Set;
 import java.util.logging.Logger;
 
 import org.osgi.service.discovery.ServiceEndpointDescription;
-
-import static org.osgi.service.discovery.ServicePublication.PROP_KEY_ENDPOINT_LOCATION;
 
 public class ServiceEndpointDescriptionImpl implements ServiceEndpointDescription {
 
@@ -45,7 +45,6 @@ public class ServiceEndpointDescriptionImpl implements ServiceEndpointDescriptio
         this(Collections.singletonList(interfaceName), Collections.EMPTY_MAP);
     }
     
-    @SuppressWarnings("unchecked")
     public ServiceEndpointDescriptionImpl(String interfaceName,
                                   Map<String, Object> remoteProperties) {
         this(Collections.singletonList(interfaceName), remoteProperties);
@@ -71,10 +70,10 @@ public class ServiceEndpointDescriptionImpl implements ServiceEndpointDescriptio
         return properties;
     }
 
+    @SuppressWarnings("unchecked")
     public Collection getPropertyKeys() {
         return getProperties().keySet();
     }
-
     
     @Override
     public int hashCode() {
@@ -96,15 +95,15 @@ public class ServiceEndpointDescriptionImpl implements ServiceEndpointDescriptio
                && properties.equals(other.getProperties());
     }
 
-    public URL getLocation() {
-        Object value = properties.get(PROP_KEY_ENDPOINT_LOCATION);
+    public URI getLocation() {
+        Object value = properties.get(ENDPOINT_LOCATION);
         if (value == null) {
             return null;
         }
         
         try {
-            return new URL(value.toString());
-        } catch (MalformedURLException ex) {
+            return new URI(value.toString());
+        } catch (URISyntaxException ex) {
             LOG.warning("Service document URL is malformed : " + value.toString());
         }
         
